<resources>
    <string name="app_name">Bookshelf</string>

    <!-- TextView -->
    <string name="tv_email">E-mail</string>
    <string name="tv_senha">Senha</string>
    <string name="tv_confSenha">Confirmar Senha</string>
    <string name="tv_tituloLivro">Titulo do livro</string>
    <string name="tv_estadoLivro">Estado</string>
    <string name="tv_descricaoLivro">Descrição do livro</string>
    <string name="tv_lendo">Lendo</string>
    <string name="tv_lido">Lido</string>

    <!-- Hint -->
    <string name="hint_email">seuemail@email.com</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confSenha">Confirmar Senha</string>
    <string name="hint_tituloLivro">Titulo do Livro</string>
    <string name="hint_descricao">Descrição do livro, ou notas</string>

    <!-- Button -->
    <string name="btn_login">Logar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_novoUsuario">Novo usuário</string>
    <string name="btn_recSenha">Recuperar senha</string>
    <string name="btn_detalhes">Detalhes</string>
    <string name="btn_mudarEstado">Mudar estado</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="btn_voltar">Voltar</string>

    <!-- Descricoes -->
    <string name="desc_btnLogin">Botão de logar no aplicativo</string>
    <string name="desc_btnCadastrar">Botão de cadastrar o novo usuário</string>
    <string name="desc_btnRecSenha">Botão de recuperar senha</string>
    <string name="desc_btnAdd">Adicionar livro</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>