<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".acesso.LoginFragment">

    <!-- Email -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input_label"
        android:text="@string/tv_email"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        />

    <!-- Senha -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/input_label"
        android:text="@string/tv_senha"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inp_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:contentDescription="@string/desc_btnLogin"
        android:layout_marginTop="16dp"
        style="@style/btn_confirma"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/btnNovoUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_novoUsuario"
            style="@style/btn_text"
            />
        <TextView
            android:id="@+id/btnRecSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_recSenha"
            style="@style/btn_text"
            />
    </LinearLayout>
</LinearLayout>