<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".NovoLivroFragment">

    <TextView
        style="@style/input_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_tituloLivro"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inp_tituloLivro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tituloLivro"
        android:inputType="text"
        />

    <TextView
        style="@style/input_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_estadoLivro"/>
    <RadioGroup
        android:id="@+id/radioGroup_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/estado_lendo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_lendo"/>
        <RadioButton
            android:id="@+id/estado_lido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_lido"/>
    </RadioGroup>

    <TextView
        style="@style/input_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricaoLivro"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descricao_livro"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="15dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/hint_descricao"
        android:inputType="textLongMessage"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_adicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_adicionar"
            android:layout_marginEnd="8dp"
            style="@style/btn_confirma"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_voltar"
            android:layout_marginStart="8dp"
            style="@style/btn_exluir"
            />
    </LinearLayout>

</LinearLayout>