<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/textTituloLivro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_tituloLivro"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statuLivro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/tv_estadoLivro"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTituloLivro" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetalhes"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_detalhes"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnMudarEstado"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statuLivro" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMudarEstado"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/btn_mudarEstado"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnExcluir"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDetalhes"
                app:layout_constraintTop_toBottomOf="@+id/statuLivro" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExcluir"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:text="@string/btn_excluir"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnMudarEstado"
                app:layout_constraintTop_toBottomOf="@+id/statuLivro" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>